[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/themes/RobotoRegular.tres" type="Theme" id=1]
[ext_resource path="res://src/ui/ServerListItem.gd" type="Script" id=2]

[node name="ServerListItem" type="PanelContainer"]
margin_right = 390.0
margin_bottom = 40.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 383.0
margin_bottom = 37.0
custom_constants/separation = 20

[node name="ServerName" type="Label" parent="HBoxContainer"]
margin_top = 1.0
margin_right = 189.0
margin_bottom = 29.0
mouse_filter = 0
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
text = "Test"

[node name="Join" type="Button" parent="HBoxContainer"]
margin_left = 209.0
margin_right = 284.0
margin_bottom = 30.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 8
text = "   Join   "

[node name="Edit" type="Button" parent="HBoxContainer"]
margin_left = 304.0
margin_right = 376.0
margin_bottom = 30.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 8
text = "   Edit   "
[connection signal="gui_input" from="." to="." method="_on_server_list_item_gui_input"]
[connection signal="gui_input" from="HBoxContainer/ServerName" to="." method="_on_server_list_item_gui_input"]
[connection signal="pressed" from="HBoxContainer/Join" to="." method="_on_join_pressed"]
